fixed beliggenhet page spacing

--- a/app/beliggenhet/page.module.css
+++ b/app/beliggenhet/page.module.css
@@ -77,6 +77,12 @@
   border-bottom: none;
 }
 
+.leftContent {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
 .mapWrapper {
   position: relative;
   height: 100%;
